[gd_scene load_steps=38 format=3 uid="uid://dp122pt878tim"]

[ext_resource type="Texture2D" uid="uid://crnak2st0acmc" path="res://assets/Characters/1 Worker/Death.png" id="1_kdwuv"]
[ext_resource type="Script" path="res://scenes/player.gd" id="1_ui1eo"]
[ext_resource type="Texture2D" uid="uid://c0ph12vsgbdjf" path="res://assets/Characters/1 Worker/Hurt.png" id="2_7sk7g"]
[ext_resource type="Texture2D" uid="uid://8xxr2g8o3vtp" path="res://assets/Characters/1 Worker/Idle.png" id="3_kp436"]
[ext_resource type="Texture2D" uid="uid://hyneh5uamlp5" path="res://assets/Characters/1 Worker/Run.png" id="4_npoeq"]
[ext_resource type="AudioStream" uid="uid://b68rsu4ax6mdp" path="res://sounds/jump.wav" id="6_0r8sh"]
[ext_resource type="AudioStream" uid="uid://ofydyqso12vq" path="res://sounds/lose.wav" id="6_1cuf2"]
[ext_resource type="PackedScene" uid="uid://dy4m1pdd7bjwv" path="res://cpu_player_die_particles.tscn" id="6_holpe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4y10"]
size = Vector2(14, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5mcr"]
atlas = ExtResource("4_npoeq")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n3fu"]
atlas = ExtResource("1_kdwuv")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k42u1"]
atlas = ExtResource("1_kdwuv")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1rmj"]
atlas = ExtResource("1_kdwuv")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mf7h3"]
atlas = ExtResource("1_kdwuv")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r05qs"]
atlas = ExtResource("1_kdwuv")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo1my"]
atlas = ExtResource("1_kdwuv")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_732ue"]
atlas = ExtResource("2_7sk7g")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iv62c"]
atlas = ExtResource("2_7sk7g")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vh8c"]
atlas = ExtResource("3_kp436")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyah1"]
atlas = ExtResource("3_kp436")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddfky"]
atlas = ExtResource("3_kp436")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fouhl"]
atlas = ExtResource("3_kp436")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_psoo3"]
atlas = ExtResource("4_npoeq")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn668"]
atlas = ExtResource("4_npoeq")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yrsf"]
atlas = ExtResource("4_npoeq")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n1fj"]
atlas = ExtResource("4_npoeq")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d32ly"]
atlas = ExtResource("4_npoeq")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5t78"]
atlas = ExtResource("4_npoeq")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_pk042"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5mcr")
}],
"loop": true,
"name": &"Airborne",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n3fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k42u1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1rmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf7h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r05qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo1my")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_732ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iv62c")
}],
"loop": true,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vh8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyah1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddfky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fouhl")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_psoo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn668")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yrsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n1fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d32ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5t78")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_f050g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Hurt"]
}

[sub_resource type="Animation" id="Animation_v5bof"]
resource_name = "airborne"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Airborne"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vx88i"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.366667, 0.533333, 0.666667, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_aslum"]
resource_name = "hurt"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Hurt"]
}

[sub_resource type="Animation" id="Animation_y1y4u"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.5, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}

[sub_resource type="Animation" id="Animation_ytlko"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pjrao"]
_data = {
"RESET": SubResource("Animation_f050g"),
"airborne": SubResource("Animation_v5bof"),
"die": SubResource("Animation_vx88i"),
"hurt": SubResource("Animation_aslum"),
"idle": SubResource("Animation_y1y4u"),
"run": SubResource("Animation_ytlko")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_frgqc"]
radius = 5.0
height = 26.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 17
script = ExtResource("1_ui1eo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -16)
shape = SubResource("RectangleShape2D_a4y10")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(9, -24)
sprite_frames = SubResource("SpriteFrames_pk042")
animation = &"Hurt"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pjrao")
}
autoplay = "idle"

[node name="JumpBufferTimer" type="Timer" parent="."]

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="DeathArea2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 42

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea2D"]
position = Vector2(-1, -17)
shape = SubResource("CapsuleShape2D_frgqc")

[node name="CPUPlayerDieParticles" parent="." instance=ExtResource("6_holpe")]

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0r8sh")
volume_db = -5.0

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1cuf2")
volume_db = -10.0

[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="body_entered" from="DeathArea2D" to="." method="_on_death_area_2d_body_entered"]
